Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         const GUIDES = [
             "Hyderali K", 
             "Balachandran K P", 
-            "Geever C Zacharias", 
+            "Geevar C Zacharias", 
             "Vasudevan T V", 
             "Priya J D", 
             "Febin Aziz", 
@@ -181,7 +181,7 @@
         const GUIDE_SHORT_CODES = {
             "Hyderali K": "HAK",
             "Balachandran K P": "KPB",
-            "Geever C Zacharias": "GCZ",
+            "Geevar C Zacharias": "GCZ",
             "Vasudevan T V": "VTV",
             "Priya J D": "PJD",
             "Febin Aziz": "FA",
@@ -514,3 +514,4 @@
     </script>
 </body>
 </html>
+
